Change title and description in index.html
Updated title and description meta tags for improved SEO.

--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>gn-math</title>
+    <title>Learnmath-Games</title>
     <meta name="title" content="GN-Math" />
     <meta
       name="description"
-      content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on GN-Math. Fast, free, no downloads—perfect for school or home."
+      content="Play fun games while still learning!"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gn-math.github.io/" />
     <meta property="og:title" content="GN-Math" />
     <meta
       property="og:description"
-      content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on GN-Math. Fast, free, no downloads—perfect for school or home."
+      content="Play fun games while still learning!"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://gn-math.github.io/" />
     <meta name="twitter:title" content="GN-Math" />
     <meta
       name="twitter:description"
-      content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on GN-Math. Fast, free, no downloads—perfect for school or home."
+      content="Play fun games while still learning!"
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="manifest" href="manifest.json" />
@@ -198,4 +198,5 @@
     </script>
   </body>
 </html>
+
 
